# MC833-Hands-On-Network

./: .gitignore  CMakeLists.txt  README.md  build-client.sh  build.sh  client-socket  client-socket.c  client.sh  example.json  runc.sh  runs.sh  sample.c  server-logic.c  server-socket  server-socket.c  server.sh  test.c  test.sh
client/: CMakeLists.txt
client/lib/: cJSON.c
client/src/: client-socket.c  client-socket.h  client.c
client/src/client/: client-socket.c
server/: CMakeLists.txt
server/database/: database.json
server/src/: server-socket.c  server-socket.h  server.c
server/src/client/: client.c
socket-tcp/: build-server.sh  build.sh
socket-tcp/client/src/: client-socket.c  client-socket.h  client.c
socket-tcp/scripts/: build.sh  run-server.sh
socket-tcp/server/src/: server.c
socket-udp/: README.md
socket-udp/client/: CMakeLists.txt
socket-udp/client/src/: client-socket.c  client-socket.h  client.c  helper-functions.c  image-listener.c  image-talker.c  listener-socket.c  talker-socket.c
socket-udp/scripts/: run-client.sh
socket-udp/server/: CMakeLists.txt  test
socket-udp/server/lib/: cJSON.h
socket-udp/server/src/: helper-functions.c  image-listener.c  listener-socket.c  server-socket.c  server-socket.h  server.c  talker-socket.c
socket-udp/text/: data-example.json
src/: client-front.c  client-logic.c  client-socket.c  server-socket.c
src/client/: client-socket.c  client-socket.h  client.c
src/server/: server-socket.c  server-socket.h  server.c
text/: data-example.json  example.json  projeto1.md  references.md  request-example.json  response-example.json
